@@ -4,6 +4,11 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Tue Oct 13 12:09 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Removed the blocked signal element from task structure, and
+	  associated code.
+
 Sun Oct 11 13:37 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Corrected some signal behavoir, fixed return status behavoir.
